--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.340.0",
     "next": "14.1.0",
+    "next-themes": "^0.2.1",
     "openai": "^4.28.0",
     "react": "^18",
     "react-dom": "^18",
