--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.7",
+    "@vercel/og": "^0.6.2",
     "braintrust": "^0.0.101",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
