--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "million": "^3.0.6",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "npm-name": "^8.0.0",
     "openai": "^4.28.0",
     "react": "^18",
     "react-dom": "^18",
