--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@markprompt/react": "^0.40.3",
     "@million/lint": "^0.0.73",
     "@onedoc/client": "^0.1.29",
     "@onedoc/react-print": "^0.1.126",
@@ -43,6 +44,9 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "remark-math": "^6.0.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uuidv4": "^6.2.13",
@@ -52,6 +56,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
