--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "braintrust": "^0.0.101",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
     "lucide-react": "^0.340.0",
     "million": "^3.0.6",
     "next": "14.1.0",
