--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.7",
+    "@vercel/analytics": "^1.2.2",
     "@vercel/og": "^0.6.2",
     "braintrust": "^0.0.101",
     "class-variance-authority": "^0.7.0",
