--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@stripe/stripe-js": "^3.3.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.7",
     "@vercel/analytics": "^1.2.2",
@@ -41,7 +42,7 @@
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.340.0",
     "million": "^3.0.6",
-    "next": "14.1.0",
+    "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "npm-name": "^8.0.0",
     "openai": "^4.28.0",
@@ -52,6 +53,7 @@
     "react-intersection-observer": "^9.8.1",
     "react-syntax-highlighter": "^15.5.0",
     "remark-math": "^6.0.0",
+    "stripe": "^15.1.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uuidv4": "^6.2.13",
