add to env example

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ BRAINTRUST_API_KEY=""
 NEXT_PUBLIC_PROJECT_KEY=""
 ONEDOC_API_KEY=""
 WHOXY_API_KEY=""
+NEXT_PUBLIC_PROJECT_KEY=""
+RAPID_API_KEY=""
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=""
+STRIPE_SECRET_KEY=""
