--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@ NEXT_PUBLIC_SUPABASE_URL=""
 NEXT_PUBLIC_SUPABASE_ANON_KEY=""
 OPENAI_API_KEY=""
 BRAINTRUST_API_KEY=""
-NEXT_PUBLIC_PROJECT_KEY=""
 ONEDOC_API_KEY=""
 WHOXY_API_KEY=""
+NEXT_PUBLIC_PROJECT_KEY=""
+RAPID_API_KEY=""
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=""
+STRIPE_SECRET_KEY=""
