--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "supabase": "^1.162.4",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
